--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
       <div class="center-vertical button">
         <a class="center-vertical margin-left" href="/#about">about</a>
       </div>
+      <div class="center-vertical button">
+        <a class="center-vertical margin-left" href="/#tech">tech</a>
+      </div>
+
       <!-- external -->
       <div class="center-vertical button">
         <img src="https://github.com/fluidicon.png" width="24" class="center-vertical" alt="Itch"/>
@@ -49,16 +53,59 @@
       <div class="spacer-horizontal"> </div>
 
       <!-- about -->
+      <div class="center-horizontal">
+        <img src="https://avatars.githubusercontent.com/u/108522291" alt="profile" width="128" class="pfp">
+      </div>
       <h3 class="center-horizontal">notme</h3>
-      <p class="center-horizontal">a developer</p>
+      <p class="center-horizontal">a programmer</p>
+    </div>
 
-      <div class="row center-horizontal">
+    <div id="tech">
+      <!-- spacers -->
+      <div class="spacer-horizontal"> </div>
+      <div class="spacer-horizontal"> </div>
+      <div class="spacer-horizontal"> </div>
+      <div class="spacer-horizontal"> </div>
+
+      <h1>tech</h1>
+
+      <!-- tech -->
+      <div class="row center-horizontal text-appear">
+        <div class="appear-left big center-vertical">O</div>
         <div id="ComputerComponent-1" class="scaler"></div>
+        <div class="appear-right big center-vertical">S</div>
+      </div>
+      <div class="row center-horizontal text-appear">
+        <div class="appear-left big center-vertical">ARCH</div>
         <div id="ArchLogoComponent-0" class="scaler"></div>
+        <div class="appear-right big center-vertical">btw.</div>
+      </div>
+      <div class="row center-horizontal text-appear">
+        <div class="appear-left big center-vertical">neo</div>
+        <div id="NeovimComponent-0" class="scaler"></div>
+        <div class="appear-right big center-vertical">vim</div>
       </div>
     </div>
 
     <div>100 Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, ipsa obcaecati. Velit quibusdam eveniet sequi quae rem optio. Voluptatum animi quaerat quisquam quos rerum quis impedit blanditiis ipsam, et deleniti!</div>
+    <div class="spacer-horizontal"></div>
+    <div class="spacer-horizontal"></div>
+    <div class="spacer-horizontal"></div>
+    <div class="spacer-horizontal"></div>
+    <div class="spacer-horizontal"></div>
+    <div class="spacer-horizontal"></div>
+    <div class="spacer-horizontal"></div>
+    <div class="spacer-horizontal"></div>
+    <div class="spacer-horizontal"></div>
+    <div class="spacer-horizontal"></div>
+    <div class="spacer-horizontal"></div>
+    <div class="spacer-horizontal"></div>
+    <div class="spacer-horizontal"></div>
+    <div class="spacer-horizontal"></div>
+    <div class="spacer-horizontal"></div>
+    <div class="spacer-horizontal"></div>
+    <div class="spacer-horizontal"></div>
+    <div class="spacer-horizontal"></div>
 
   </div>
 
