--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
       <h3 class="center-horizontal">notme</h3>
       <p class="center-horizontal">a programmer</p>
     </div>
+    <hr>
 
     <div id="tech">
       <!-- spacers -->
@@ -67,7 +68,7 @@
       <div class="spacer-horizontal"> </div>
       <div class="spacer-horizontal"> </div>
 
-      <h1>tech</h1>
+      <h1 class="center-horizontal">tech</h1>
 
       <!-- tech -->
       <div class="row center-horizontal text-appear">
@@ -87,7 +88,6 @@
       </div>
     </div>
 
-    <div>100 Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, ipsa obcaecati. Velit quibusdam eveniet sequi quae rem optio. Voluptatum animi quaerat quisquam quos rerum quis impedit blanditiis ipsam, et deleniti!</div>
     <div class="spacer-horizontal"></div>
     <div class="spacer-horizontal"></div>
     <div class="spacer-horizontal"></div>
