--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="./data/computer/computer.css"> 
 </head>
 <body>
+  
   <header>
     <div class="center-horizontal">
       <!-- left -->
@@ -41,6 +42,9 @@
     </div>
   </header>
 
+  <div class="bg-wrap">
+    <div id="BigComputerComponent-0" class="bg"></div>
+  </div>
   <div class="content-wrap">
 
     <div class="spacer-horizontal"></div>
@@ -106,6 +110,8 @@
     <div class="spacer-horizontal"></div>
     <div class="spacer-horizontal"></div>
     <div class="spacer-horizontal"></div>
+
+    <p class="center-horizontal">uwu</p>
 
   </div>
 
