made it lighter to run

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </header>
 
   <div class="bg-wrap">
-    <div id="BigComputerComponent-0" class="bg"></div>
+    <!-- <div id="BigComputerComponent-0" class="bg"></div> -->
   </div>
   <div class="content-wrap">
 
@@ -76,18 +76,13 @@
 
       <!-- tech -->
       <div class="row center-horizontal text-appear">
-        <div class="appear-left big center-vertical">O</div>
-        <div id="ComputerComponent-1" class="scaler"></div>
-        <div class="appear-right big center-vertical">S</div>
-      </div>
-      <div class="row center-horizontal text-appear">
         <div class="appear-left big center-vertical">ARCH</div>
-        <div id="ArchLogoComponent-0" class="scaler"></div>
+        <img class="static-logo arch-logo" src="https://raw.githubusercontent.com/EgoistDeveloper/operating-system-logos/master/src/48x48/ARL.png"></img>
         <div class="appear-right big center-vertical">btw.</div>
       </div>
       <div class="row center-horizontal text-appear">
         <div class="appear-left big center-vertical">neo</div>
-        <div id="NeovimComponent-0" class="scaler"></div>
+        <img class="static-logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/Neovim-mark.svg/492px-Neovim-mark.svg.png"></img>
         <div class="appear-right big center-vertical">vim</div>
       </div>
     </div>
