updated the look

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="center-horizontal">
         <img src="https://avatars.githubusercontent.com/u/108522291" alt="profile" width="128" class="pfp">
       </div>
-      <h3 class="center-horizontal">notme</h3>
+      <h3 class="center-horizontal mono">noTme</h3>
       <p class="center-horizontal">a programmer</p>
     </div>
     <hr>
@@ -76,14 +76,14 @@
 
       <!-- tech -->
       <div class="row center-horizontal text-appear">
-        <div class="appear-left big center-vertical">ARCH</div>
-        <img class="static-logo arch-logo" src="https://raw.githubusercontent.com/EgoistDeveloper/operating-system-logos/master/src/48x48/ARL.png"></img>
-        <div class="appear-right big center-vertical">btw.</div>
+        <div class="appear-left big center-vertical monofont">ARCH</div>
+        <img class="static-logo outline" src="https://raw.githubusercontent.com/EgoistDeveloper/operating-system-logos/master/src/48x48/ARL.png"></img>
+        <div class="appear-right big center-vertical monofont">btw.</div>
       </div>
       <div class="row center-horizontal text-appear">
-        <div class="appear-left big center-vertical">neo</div>
-        <img class="static-logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/Neovim-mark.svg/492px-Neovim-mark.svg.png"></img>
-        <div class="appear-right big center-vertical">vim</div>
+        <div class="appear-left big center-vertical monofont">neo</div>
+        <img class="static-logo outline" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/Neovim-mark.svg/492px-Neovim-mark.svg.png"></img>
+        <div class="appear-right big center-vertical monofont">vim</div>
       </div>
     </div>
 
