--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
   <link rel="stylesheet" href="./data/computer/computer.css"> 
 </head>
 <body>
-  
+  <div class="warning-bg">
+    <div class="warning-text monospace big center-horizontal center-vertical">
+        WARNING! (bright colors)
+    </div>
+  </div>
+
   <header>
     <div class="center-horizontal">
       <!-- left -->
@@ -32,7 +37,8 @@
 
       <!-- external -->
       <div class="center-vertical button">
-        <img src="https://github.com/fluidicon.png" width="24" class="center-vertical" alt="Itch"/>
+        <!-- <img src="https://github.com/fluidicon.png" width="24" class="center-vertical" alt="Itch"/> -->
+        <img src="./data/github-mark-white.png" width="24" class="center-vertical" alt="Itch"/>
         <a class="center-vertical margin-left" href="https://www.github.com/bendikMichal">code</a>
       </div>
       <div class="center-vertical button">
