--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="warning-bg">
     <div class="warning-text monospace big center-horizontal center-vertical">
-        WARNING! (bright colors)
+      Protect your privacy >:D
     </div>
   </div>
 
@@ -69,16 +69,16 @@
       <h3 class="center-horizontal mono">noTme</h3>
       <p class="center-horizontal">a programmer</p>
     </div>
-    <hr>
+    <!-- <hr> -->
 
     <div id="tech">
       <!-- spacers -->
-      <div class="spacer-horizontal"> </div>
-      <div class="spacer-horizontal"> </div>
+      <!-- <div class="spacer-horizontal"> </div>
+      <div class="spacer-horizontal"> </div> -->
       <div class="spacer-horizontal"> </div>
       <div class="spacer-horizontal"> </div>
 
-      <h1 class="center-horizontal">tech</h1>
+      <h1 class="center-horizontal">What I use</h1>
 
       <!-- tech -->
       <div class="row center-horizontal text-appear">
