works with mobile now

--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
   <header>
     <div class="center-horizontal">
       <!-- left -->
-      <div id="ComputerComponent-0" onclick="window.location='/'"></div>
-      <p class="center-vertical"><b>noTme</b></p>
+      <div id="ComputerComponent-0" class="mobile-hidden" onclick="window.location='/'"></div>
+      <p class="mobile-hidden center-vertical"><b>noTme</b></p>
 
-      <div class="spacer-vertical"></div>
-      <div class="spacer-vertical"></div>
-      <div class="spacer-vertical"></div>
+      <div class="mobile-hidden spacer-vertical"></div>
+      <div class="mobile-hidden spacer-vertical"></div>
+      <div class="mobile-hidden spacer-vertical"></div>
+
 
       <!-- site -->
       <div class="center-vertical button">
